--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <body>
 	<h1> Hello Git </h1>
-	<p> Hello, my dear friend! </p>
+	<p> Hello, my dear friend! You are a good person! </p>
 </body>
 </html>
